; ModuleID = '/home/carl/AnghaBench/git/extr_tag.c_run_gpg_verify.c'
source_filename = "/home/carl/AnghaBench/git/extr_tag.c_run_gpg_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.signature_check = type { i32 }

@GPG_VERIFY_VERBOSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"no signature found\00", align 1
@GPG_VERIFY_OMIT_STATUS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i32)* @run_gpg_verify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run_gpg_verify(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.signature_check, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = call i32 @memset(%struct.signature_check* %8, i32 0, i32 4)
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i64 @parse_signature(i8* %12, i64 %13)
  store i64 %14, i64* %9, align 8
  %15 = load i64, i64* %6, align 8
  %16 = load i64, i64* %9, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %29

18:                                               ; preds = %3
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* @GPG_VERIFY_VERBOSE, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load i8*, i8** %5, align 8
  %25 = load i64, i64* %9, align 8
  %26 = call i32 @write_in_full(i32 1, i8* %24, i64 %25)
  br label %27

27:                                               ; preds = %23, %18
  %28 = call i32 @error(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  store i32 %28, i32* %4, align 4
  br label %49

29:                                               ; preds = %3
  %30 = load i8*, i8** %5, align 8
  %31 = load i64, i64* %9, align 8
  %32 = load i8*, i8** %5, align 8
  %33 = load i64, i64* %9, align 8
  %34 = getelementptr inbounds i8, i8* %32, i64 %33
  %35 = load i64, i64* %6, align 8
  %36 = load i64, i64* %9, align 8
  %37 = sub i64 %35, %36
  %38 = call i32 @check_signature(i8* %30, i64 %31, i8* %34, i64 %37, %struct.signature_check* %8)
  store i32 %38, i32* %10, align 4
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* @GPG_VERIFY_OMIT_STATUS, align 4
  %41 = and i32 %39, %40
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %46, label %43

43:                                               ; preds = %29
  %44 = load i32, i32* %7, align 4
  %45 = call i32 @print_signature_buffer(%struct.signature_check* %8, i32 %44)
  br label %46

46:                                               ; preds = %43, %29
  %47 = call i32 @signature_check_clear(%struct.signature_check* %8)
  %48 = load i32, i32* %10, align 4
  store i32 %48, i32* %4, align 4
  br label %49

49:                                               ; preds = %46, %27
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i32 @memset(%struct.signature_check*, i32, i32) #1

declare dso_local i64 @parse_signature(i8*, i64) #1

declare dso_local i32 @write_in_full(i32, i8*, i64) #1

declare dso_local i32 @error(i8*) #1

declare dso_local i32 @check_signature(i8*, i64, i8*, i64, %struct.signature_check*) #1

declare dso_local i32 @print_signature_buffer(%struct.signature_check*, i32) #1

declare dso_local i32 @signature_check_clear(%struct.signature_check*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
